--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,7 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  font-size: 20px;
 }
 h3,
 h1 {
